# baha-scraper

./: .dockerignore  .gitignore  Dockerfile  commands.md  docker-compose.yml  export.bat  main.py  pyproject.toml  requirements.txt  scraper.py  test.py  utils.py
app/: app.py
app/static/: index.html  script.js  style.css
src/: main.py  scraper.py  status.py  utils.py
src/append_to_db/: __init__.py  client.py  func.py  type.py
tests/: 0.html  0.md  test.html  test_post.py  test_post_list.py
