[project]
name = "20260104-scrape-baha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4==4.12.3",
    "fastapi>=0.128.0",
    "frozendict>=2.4.7",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "orjson>=3.11.5",
    "uvicorn>=0.40.0",
]
